# HackUmassCelestialSimulator

./: Cargo.toml  README.md
shaders/: fragment.wgsl  vertex.wgsl
src/: calculations.rs  camera.rs  main.rs  mesh.rs  renderer.rs
